[package]
name = "rq3vm"
version = "0.2.0"
authors = ["Raffael Zica <raffael@pixeltastic.de>"]
description = "Rusty high level wrapper for q3vm. Tries to make C scripting as ergonomic as possible"
keywords = ["scripting", "game", "quake", "vm", "c"]
repository = "https://gitlab.com/SirJson/rq3vm"
readme = "README.md"
exclude = ["**/*.gitignore"]

[dependencies]
libq3vm-sys = { path = "./libq3vm-sys" }
lazy_static = "1"
log = "0.4"

[[example]]
name = "helloq3"
path = "examples/helloq3"
crate-type = ["bin"]
