[package]
name = "libq3vm-sys"
version = "0.1.4"
authors = ["Raffael Zica <raffael@pixeltastic.de>"]
build = "build.rs"
description = "Raw C bindings to q3vm + some helper"
keywords = ["scripting", "game", "quake", "vm", "c", "sys", "bindgen"]
repository = "https://gitlab.com/SirJson/rq3vm"
readme = "README.md"
exclude = ["**/*.gitignore", "ext/q3vm/*"]

[dependencies]
lazy_static = "1"
log = "0.4"

[build-dependencies]
cc = { version = "1",  features = ["parallel"] }
bindgen = "0.26"
crc = "1.8"
commandspec = "0.10"
maplit = "1.0"
